<resources>
    <string name="app_name">PastillAPP</string>
    <string name="todo">TODO</string>
    <string name="text_lTitle">Inicia sesión para continuar</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_create_account">Crear una cuenta</string>
    <string name="text_forgot_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_rTitle">Completa los campos para continuar</string>
    <string name="text_username">Nombre y apellido</string>
    <string name="text_confirm_password">Confirmar contraseña</string>
    <string name="text_have_account"><u>¿Ya tiene una cuenta?</u></string>
    <string name="text_register">Crear cuenta</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="text_fTitle">Ingrese su correo electrónico para continuar</string>
    <string name="text_info_recover_password">Al hacer clic en \"Recuperar contraseña\" le enviaremos un correo electrónico para que pueda cambiar su contraseña</string>
    <string name="text_pharmacies">Farmacias</string>
    <string name="text_products">Productos</string>
    <string name="text_add_product">Toca para agregar la imagen del producto</string>
    <string name="text_product_name">Nombre de producto</string>
    <string name="text_presentation">Presentación</string>
    <string name="text_category">Categoría</string>
    <string name="text_description">Descripción</string>
    <string name="text_yes">Si</string>
    <string name="text_no">No</string>
    <string name="text_prescription">Receta médica</string>
    <string name="text_save">Guardar</string>
    <string name="text_register_date">Fecha de registro</string>
    <string name="text_pharmacy_name">Nombre de la farmacia</string>
    <string name="text_address">Dirección</string>
    <string name="text_phone">Número de teléfono</string>
    <string name="text_business_hours">Horario de atención</string>
    <string name="text_open">Hora de apertura</string>
    <string name="text_close">Hora de cierre</string>
    <string name="text_required_image">La foto del producto es obligatorio</string>
    <string name="text_search_product">Buscar un producto</string>
    <string name="text_required_prescription">Este producto requiere receta médica</string>
    <string name="text_edit_product">Editar producto</string>
    <string name="text_add_pharmacy">Agregar farmacia</string>
    <string name="text_available_pharmacies">Disponible en las siguientes farmacias:</string>
    <string name="text_select_pharmacy">Elige una farmacia</string>
    <string name="text_title_dialog">Asigna una farmacia para este producto</string>
    <string name="text_price">Precio</string>
    <string name="text_pharmacy">Farmacia</string>
    <string name="text_location">Ubicación</string>
    <string name="text_view_address">Ver dirección</string>
    <string name="text_call">Llamar</string>
    <string name="text_share">Compartir</string>
    <string name="text_location_denied">No se pudo calcular a cuanto tiempo está del punto destino</string>
    <string name="text_title_products">Productos disponibles</string>
    <string name="text_update_product">Actualizar producto</string>
    <string name="text_view_report">Ver reporte</string>
    <string name="text_title_report">Reporte de Visitas</string>
    <string name="header_table_pos">#</string>
    <string name="header_table_date">Día de Visita</string>
    <string name="header_table_count">Nro. Visitas</string>

    <!--Google Maps API's-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAF-Zd_X2nGoOTTGQhXAZ59DhHFyyZyKhE</string>
    <string name="google_places_key">AIzaSyCkeH5DEADNCCGAyY0rSZf3HZe392dBzAE</string>
    <string name="google_browser_key">AIzaSyBy81nmmnq2oYSAoskuqadMDp1P_-fcaAE</string>

</resources>