<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.RecoverPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/app_name"
            android:textColor="@color/colorGray"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/text_fTitle"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_fEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_border_blue"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/hammersmith_one"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/colorGray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_fSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_fill_blue"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/text_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/text_info_recover_password"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>