<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.Register">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/app_name"
                android:textColor="@color/colorGray"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/text_rTitle"
                android:textAlignment="center"
                android:textColor="@color/colorGray"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_rUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_border_blue"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/hammersmith_one"
                android:hint="@string/text_username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_blue"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/hammersmith_one"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_blue"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/hammersmith_one"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_blue"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="@font/hammersmith_one"
                android:hint="@string/text_confirm_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_rCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_fill_blue"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_rHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@null"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/text_have_account"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>