<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/text_title_dialog"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/ac_pharmaciesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_blue"
                android:enabled="false"
                android:fontFamily="@font/hammersmith_one"
                android:hint="@string/text_select_pharmacy"
                android:inputType="none"
                android:padding="14dp"
                android:textColor="@color/colorGray"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_border_blue"
            android:digits="0123456789."
            android:fontFamily="@font/hammersmith_one"
            android:hint="@string/text_price"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_savePharmacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_fill_blue"
            android:fontFamily="@font/hammersmith_one"
            android:text="@string/text_save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>